# llm-journey-rs

./: Cargo.toml  README.md  shell.nix
bins/cli/: Cargo.toml
bins/cli/src/: main.rs
crates/llm/: Cargo.toml
crates/llm/src/: config.rs  lib.rs  model.rs  utils.rs  var_builder.rs
crates/llm/src/deepseek2/: config.rs  loader.rs  mod.rs  model.rs  rotary_embedding.rs
crates/llm/tests/: deepseek_lite_test.rs
docs/: embedding.md  glossary.md
docs/journals/: day-2.md  day-3.md  day-4.md  day-5.md  day-6.md  day-7.md  day-8.md  day-one.md  day-three.md  day-two.md
prompts/: torch_to_candle.md
