[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }


gguf-rs = "0.1.3"
hf-hub = "0.3"
tokenizers = "0.20.0"

#candle-core = "0.6"
#candle-nn = "0.6"
#candle-transformers = "0.6"
#candle-flash-attn = "0.6.0"
candle-core = { git = "https://github.com/EricLBuehler/candle.git", version = "0.6.0", rev = "8a99f7c" }
candle-nn = { git = "https://github.com/EricLBuehler/candle.git", version = "0.6.0", rev = "8a99f7c" }
candle-transformers= { git = "https://github.com/EricLBuehler/candle.git", version = "0.6.0", rev = "8a99f7c" }
candle-flash-attn = { git = "https://github.com/EricLBuehler/candle.git", version = "0.6.0", rev = "8a99f7c" }
bindgen_cuda = {git = "https://github.com/guoqingbao/bindgen_cuda.git", version = "0.1.6"}
