[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
env_logger = "0.11"  # Replace with the latest version if needed
log = "0.4"        # env_logger depends on the log crate, so you need to add it as well


gguf-rs = "0.1.3"
hf-hub = "0.3"
tokenizers = "0.20.0"

#candle-core = "0.7"
#candle-nn = "0.7"
#candle-transformers = "0.7"
#candle-flash-attn = "0.7"

candle-core = { path = "/run/media/magicalne/ssd1/git/opensource/candle/candle-core/"}
candle-nn= { path = "/run/media/magicalne/ssd1/git/opensource/candle/candle-nn/"}
candle-transformers= { path = "/run/media/magicalne/ssd1/git/opensource/candle/candle-transformers/"}
candle-flash-attn= { path = "/run/media/magicalne/ssd1/git/opensource/candle/candle-flash-attn/"}

#candle-core = { git = "https://github.com/EricLBuehler/candle.git", version = "0.6.0", rev = "8a99f7c" }
#candle-nn = { git = "https://github.com/EricLBuehler/candle.git", version = "0.6.0", rev = "8a99f7c" }
#candle-transformers= { git = "https://github.com/EricLBuehler/candle.git", version = "0.6.0", rev = "8a99f7c" }
#candle-flash-attn = { git = "https://github.com/EricLBuehler/candle.git", version = "0.6.0", rev = "8a99f7c" }
bindgen_cuda = {git = "https://github.com/guoqingbao/bindgen_cuda.git", version = "0.1.6"}
rayon = "1.10.0"


tikv-jemallocator = "0.6"
